.prelude/i-effect/repos/tsgo/testdata/baselines/reference/effect-v3/overriddenSchemaConstructor.errors.txt
=== Metadata ===
Effect version: 3.19.19

/.src/overriddenSchemaConstructor.ts(30,3): error TS377044: This Schema subclass defines its own constructor. For Schema classes, constructor overrides break decoding behavior for the class shape. Custom construction can be expressed through a static `new` method instead. effect(overriddenSchemaConstructor)
/.src/overriddenSchemaConstructor.ts(37,3): error TS377044: This Schema subclass defines its own constructor. For Schema classes, constructor overrides break decoding behavior for the class shape. Custom construction can be expressed through a static `new` method instead. effect(overriddenSchemaConstructor)


==== /.src/overriddenSchemaConstructor.ts (2 errors) ====
    // @effect-v3
    import * as Schema from "effect/Schema"
    
    export class Valid extends Schema.Class<Valid>("Valid")({
      a: Schema.Finite
    }) {}
    
    export class Valid2 extends Schema.Class<Valid2>("Valid")({
      a: Schema.Finite
    }) {
      otherMethod() {
        return this.a
      }
    }
    
    export class BaseClass {}
    export class Valid3 extends BaseClass {
      constructor() {
        super()
      }
    }
    
    // this is invalid because if the class extends a Schema, there should be no constructor override
    export class InvalidBecauseOfConstructor
      extends Schema.Class<InvalidBecauseOfConstructor>("InvalidBecauseOfConstructor")({
        a: Schema.Finite
      })
    {
      // should be report here at constructor location
      constructor() {
      ~~~~~~~~~~~
!!! error TS377044: This Schema subclass defines its own constructor. For Schema classes, constructor overrides break decoding behavior for the class shape. Custom construction can be expressed through a static `new` method instead. effect(overriddenSchemaConstructor)
        super({ a: 42 })
      }
    }
    
    // this is invalid because if the class extends a Schema, there should be no constructor override (even forced weirdly!)
    export class InvalidExtendsString extends Schema.Struct({}) {
      constructor() {
      ~~~~~~~~~~~
!!! error TS377044: This Schema subclass defines its own constructor. For Schema classes, constructor overrides break decoding behavior for the class shape. Custom construction can be expressed through a static `new` method instead. effect(overriddenSchemaConstructor)
        super({} as any as never)
      }
    }
    
